fix images that were not showing

--- a/David/Personal Blog Web/css/blog.css
+++ b/David/Personal Blog Web/css/blog.css
@@ -1,9 +1,9 @@
-/*
+
 .container{
-    /* Step 1: Set display to grid 
+     /* Step 1: Set display to grid  */
     display:grid;
     /* Step 2: setup rows amd columns */
-    /* grid-template-columns: repeat(3, 1fr); 
+    grid-template-columns: repeat(3, 1fr); 
     grid-template-columns: 300px 300px 300px;
     grid-template-rows: 100px 350px 600px 100px;
     grid-template-areas: 
@@ -15,7 +15,7 @@
 }
 
 .box{
-    /*width: 100%;
+    width: 100%;
     border: 1px solid rgb(157, 169, 177);
     background: #cdd4d5;
 }
@@ -26,13 +26,13 @@
 
 .footer{
     grid-area: ft;  
-
+}
 .feature{
     grid-area: feat;
 }
 .content{
     grid-area: main;
-}*/
+}
 
 
 .content2 {
